--- a/yaml/hello_arc.yaml
+++ b/yaml/hello_arc.yaml
@@ -33,4 +33,4 @@ spec:
         - containerPort: 8080
         env:
         - name: MESSAGE
-          value: This is an Azure Arc GitOps Demo! Now by Ravikrishna
+          value: This is an Azure Arc GitOps Demo! Now by Ravikrishna on October 22
