--- a/yaml/hello_arc.yaml
+++ b/yaml/hello_arc.yaml
@@ -33,4 +33,4 @@ spec:
         - containerPort: 8080
         env:
         - name: MESSAGE
-          value: Azure Arc Now by Ravikrishna on October 24!!
+          value: Azure Arc Now by Ravikrishna on October 24 night 11pm!!
